# magic-router

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  config.local.toml  config.tests.toml  hello.json  test-registration.sh
.cargo/: config.toml
.github/: version-align.sh
.github/workflows/: publish-packages.yml  rust.yml
local-validator-setup/: Cargo.toml  README.md
local-validator-setup/src/: main.rs
setup/src/: main.rs
src/: account.rs  accounts.rs  cache.rs  config.rs  error.rs  http.rs  lib.rs  local_setup.rs  logging.rs  main.rs  server.rs  solana.rs  types.rs  utils.rs
src/cache/: delegations.rs  mod.rs  routes.rs  transactions.rs
src/http/: mod.rs
src/pubsub/: connection.rs  dispatch.rs  laser.rs  mod.rs  notification.rs  subscription.rs
src/request/: handler.rs  method.rs  mod.rs
src/rpc/: http.rs  websocket.rs
src/server/: http.rs  websocket.rs
src/websocket/: connection.rs  message.rs  mod.rs  pool.rs  subscription.rs
test/: .gitignore  README.md  config.local-no-laser.toml  config.local.toml  test-registration.sh
tests/: common.rs  http_requests.rs  server.rs  test_http_requests.rs  ws_subscriptions.rs
