[package]
name = "magicblock-rpc-router"
version = "0.0.1"
authors = ["MagicBlock Maintainers <maintainers@magicblock.xyz>"]
repository = "https://github.com/magicblock-labs/magic-router"
homepage = "https://www.magicblock.xyz"
license = "Business Source License 1.1"
edition = "2021"


# JSON RPC framework
[dependencies.jsonrpsee]
version = "0.24"
features = [
	"http-client",
	"ws-client",
	"async-client",
	"server",
	"macros",
	"client-ws-transport-tls"
]

[dependencies]
# async runtime
futures = "0.3"
pin-project-lite = "0.2"
tokio = { version = "1.0", features = [ "time", "rt-multi-thread", "macros" ] }
tokio-util = { version = "0.7", features = [ "compat" ] }

# solana
solana-account = { version = "2.2" }
solana-pubkey = { version = "2.2", features = [ "serde" ] }
solana-account-decoder = { version = "2.2" }
solana-rpc-client-api = { version = "2.2" }
solana-rpc-client = { version = "2.2" }
solana-commitment-config = { version = "2.2" }

# programs 
mdp = { package = "magic-domain-program", git = "https://github.com/magicblock-labs/magic-domain-program.git", rev = "eba7644" } 

# sync
flume = "0.11"

# networking
url = { version = "2.5", features = ["serde"] }

# containers 
scc = "2.2"

# serde/parsing
toml = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
json = { package = "sonic-rs", version = "0.3" } 
borsh = "1.5"
bs58 = "0.5"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }


# misc
thiserror = "2.0"

[dev-dependencies]
solana-pubsub-client = { version = "2.2" }
