[package]
name = "magicblock-rpc-router"
version = "0.0.1"
authors = ["MagicBlock Maintainers <maintainers@magicblock.xyz>"]
repository = "https://github.com/magicblock-labs/magic-router"
homepage = "https://www.magicblock.xyz"
license = "Business Source License 1.1"
edition = "2021"

[lib]
name = "router"

# JSON RPC framework
[dependencies.jsonrpsee]
version = "0.24"
features = [
  "http-client",
  "ws-client",
  "async-client",
  "server",
  "macros",
  "client-ws-transport-tls",
]

[dependencies]
# async runtime
futures = "0.3"
pin-project-lite = "0.2"
tokio = { version = "1.0", features = ["time", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }

# solana
solana-account = { version = "2.2" }
solana-account-decoder = { version = "2.2" }
solana-commitment-config = { version = "2.2" }
solana-epoch-info = { version = "2.2" }
solana-epoch-schedule = { version = "2.2" }
solana-hash = { version = "2.2" }
solana-pubkey = { version = "2.2", features = ["serde"] }
solana-rpc-client = { version = "2.2" }
solana-rpc-client-api = { version = "2.2" }
solana-signature = { version = "2.2" }
solana-transaction = { version = "2.2" }
solana-transaction-error = { version = "2.2" }
solana-transaction-status-client-types = { version = "2.2" }

# programs 
mdp = { package = "magic-domain-program", git = "https://github.com/magicblock-labs/magic-domain-program.git", rev = "3bf9a39", default-features = false }
dlp = { package = "magicblock-delegation-program", git = "https://github.com/magicblock-labs/delegation-program.git", rev = "9570abf", features = [
  "no-entrypoint",
] }

# sync
flume = "0.11"

# networking
url = { version = "2.5", features = ["serde"] }
ping = { version = "0.8", package = "surge-ping" }
helius-laserstream = "0.1.3"

# containers 
scc = "2.2"

# serde/parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
json = { package = "sonic-rs", version = "0.3" }
borsh = "1.5"
bs58 = "0.5"
base64 = "0.22"
bincode = "1.3"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


# misc
thiserror = "2.0"

# middleware for CORS support
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
solana-pubsub-client = { version = "2.2" }
solana-system-transaction = { version = "2.2" }
solana-hash = { version = "2.2" }
solana-keypair = { version = "2.2" }
reqwest = { version = "0.12", features = ["json"] }
