[package]
name = "magicblock-rpc-router"
version = "0.0.1"
authors = ["MagicBlock Maintainers <maintainers@magicblock.xyz>"]
repository = "https://github.com/magicblock-labs/magic-router"
homepage = "https://www.magicblock.xyz"
license = "Business Source License 1.1"
edition = "2021"

[lib]
name = "router"

# JSON RPC framework
[dependencies.jsonrpsee]
version = "0.24"
features = [
  "http-client",
  "ws-client",
  "async-client",
  "server",
  "macros",
  "client-ws-transport-tls",
]

# programs 
[dependencies.mdp]
package = "magic-domain-program"
git = "https://github.com/magicblock-labs/magic-domain-program.git"
tag = "v0.3.0"
default-features = false


[dependencies]
# async runtime
futures = "0.3"
pin-project-lite = "0.2"
tokio = { version = "1.0", features = ["time", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }

# solana
solana-account = { version = "3.0" }
solana-account-decoder = { version = "3.0" }
solana-commitment-config = { version = "3.0" }
solana-epoch-info = { version = "3.0" }
solana-epoch-schedule = { version = "3.0" }
solana-hash = { version = "3.0" }
solana-pubkey = { version = "3.0", features = ["serde"] }
solana-rpc-client = { version = "3.0" }
solana-rpc-client-api = { version = "3.0" }
solana-signature = { version = "3.0" }
solana-transaction = { version = "3.0" }
solana-transaction-error = { version = "3.0" }
solana-transaction-status-client-types = { version = "3.0" }

# sync
flume = "0.11"

# networking
url = { version = "2.5", features = ["serde"] }
ping = { version = "0.8", package = "surge-ping" }
magicblock-sync = { git = "https://github.com/magicblock-labs/magicblock-sync.git", rev = "c85323" }

# containers 
scc = "3.0"

# serde/parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
json = { package = "sonic-rs", version = "0.3" }
borsh = "1.5"
bs58 = "0.5"
base64 = "0.22"
bincode = "1.3"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


# misc
thiserror = "2.0"

# middleware for CORS support
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
solana-pubsub-client = { version = "3.0" }
solana-system-transaction = { version = "3.0" }
solana-hash = { version = "3.0" }
solana-keypair = { version = "3.0" }
reqwest = { version = "0.12", features = ["json"] }
