[package]
name = "magic-router-local-setup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "register-validator"
path = "src/main.rs"

[dependencies]
# Solana (v3.0 to match router)
solana-pubkey = { version = "3.0", features = ["serde"] }
solana-rpc-client = { version = "3.0" }
solana-keypair = { version = "3.0" }
solana-signer = { version = "3.0" }
solana-transaction = { version = "3.0" }
solana-program = { version = "3.0" }
solana-system-program = { version = "3.0" }

# async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Utils
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"

# programs
mdp = { package = "magic-domain-program", git = "https://github.com/magicblock-labs/magic-domain-program.git", tag = "v0.3.0", default-features = false }

# serde
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
